--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Luminosity. Coming Soon.</h1>
+    <h1>Luminosity. Coming Soon. &#128640;</h1>
 </body>
 </html>
